--- a/privacidade.html
+++ b/privacidade.html
@@ -59,6 +59,6 @@
     <p>Podemos atualizar esta Política de Privacidade de tempos em tempos. Quaisquer alterações serão publicadas nesta página e a data da última atualização será revisada no topo da página.</p>
     
     <h2>Contato</h2>
-    <p>Se você tiver dúvidas ou preocupações sobre esta Política de Privacidade, entre em contato conosco através do e-mail: <a href="mailto:pedro.cruzeiro@km.srv.br">contato@empresa.com</a>.</p>
+    <p>Se você tiver dúvidas ou preocupações sobre esta Política de Privacidade, entre em contato conosco através do e-mail: <a href="mailto:pedro.cruzeiro@km.srv.br">pedro.cruzeiro@km.srv.br</a>.</p>
 </body>
 </html>
