--- a/servico.html
+++ b/servico.html
@@ -47,4 +47,12 @@
     <p>Em nenhum caso seremos responsáveis por quaisquer danos diretos, indiretos, incidentais, especiais ou consequenciais decorrentes do uso ou da incapacidade de usar nosso bot.</p>
 
     <h2>Encerramento</h2>
-    <p>Podemos encerrar ou suspender seu acesso ao nosso bot imediatamente, sem aviso prévio ou responsabilidade, por
+    <p>Podemos encerrar ou suspender seu acesso ao nosso bot imediatamente, sem aviso prévio ou responsabilidade, por qualquer motivo, incluindo se você violar estes Termos de Serviço.</p>
+
+    <h2>Lei Aplicável</h2>
+    <p>Estes Termos de Serviço serão regidos e interpretados de acordo com as leis do Brasil, sem considerar seu conflito de provisões legais.</p>
+
+    <h2>Contato</h2>
+    <p>Se você tiver dúvidas ou preocupações sobre estes Termos de Serviço, entre em contato conosco através do e-mail: <a href="mailto:pedro.cruzeiro@km.srv.br">pedro.cruzeiro@km.srv.br</a>.</p>
+</body>
+</html>
